[package]
name = "social-api"
version = "0.1.0"
authors = ["Eduardo Nazário <eduardo.nazario@tecnico.ulisboa.pt>"]
description = "API to fetch the IST's Alameda campus canteen"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.7", features = ["blocking"] }
select = "0.5.0"
clap = { version = "3.0", features = ["derive"] }
termion = "1.5.6"
chrono = "0.4.19"
dict = "0.1.5"
serde_json =  { version = "1.0.82", features = ["preserve_order"] }
serde = { version = "1.0.140", features = ["derive"] }
rocket = "0.5.0-rc.2"